--- a/backend/package.json
+++ b/backend/package.json
@@ -50,7 +50,7 @@
     "express-async-errors": "^3.1.1",
     "ffmpeg-static": "^5.2.0",
     "file-type": "^16.5.4",
-    "fluent-ffmpeg": "^2.1.2",
+    "fluent-ffmpeg": "^2.1.3",
     "gn-api-sdk-typescript": "^2.0.1",
     "googleapis": "^113.0.0",
     "helmet": "^7.1.0",
@@ -66,6 +66,7 @@
     "mysql2": "^2.3.3",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
+    "node-opus": "^0.3.3",
     "nodemailer": "^6.8.0",
     "notificamehubsdk": "^0.0.20",
     "openai": "^4.24.7",
@@ -81,6 +82,7 @@
     "sequelize": "^5.22.3",
     "sequelize-cli": "^5.5.1",
     "sequelize-typescript": "^1.1.0",
+    "sharp": "^0.32.6",
     "socket.io": "^4.7.4",
     "string-similarity": "^4.0.4",
     "stripe": "^12.6.0",
