--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "icons": "^1.0.0",
     "jssip": "^3.10.1",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.536.0",
     "markdown-to-jsx": "^7.1.0",
     "material-ui-color": "^1.2.0",
     "material-ui-popup-state": "^4.1.0",
